Added loading using HTML data attributes
Also the main loadif function now accepts DOM objects as well as CSS
selectors

--- a/test.html
+++ b/test.html
@@ -8,8 +8,9 @@
 	</head>
 	<body>
 		<div class="block"></div>
+		<div data-load="partial.html if (min-width: 800px)"></div>
 
-		<script src="js/loadif.js"></script>
+		<script src="loadif.js"></script>
 		<script>
 
 		loadif('.block', 'partial.html', '(min-width: 800px)');
